--- a/index.html
+++ b/index.html
@@ -2,14 +2,33 @@
 <html>
     <head>
         <tittke> My cool website</tittke>
-    </head>
+
     <body>
 
-
-    </body>
     <hi> My Cool Website </hi>
 
-    </head>
+
     <p> I think my HTML is neat!</p>
-    <img src="https://www.dreamstime.com/stock-photo-funny-man-big-fists-ready-fight-isolated-white-background-image52211523"
-</html>
+    <img src=""
+    <blockquote>"i Looked like this when i was young, and i still do," </blockquote>
+
+    <script>
+        var index = 0;
+    
+        function changeQuote() {
+            var quotes = [
+
+            `"I really like web development!"`,
+            `,"I am engoying Time at hammer Hacks!"`
+            `"i Looked like this when i was young, and i still do,"`
+            ];
+            var blockqoute = document.quertySelector("blockquote");
+            blockquote.innerHTML = quotes[index];
+            index++;
+        }
+
+
+
+    </script> 
+    </body>
+    </html>
